--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </div>
    <div>
-        <center> <P id="img-caption"> The greatest mamel on the plant!!</p></center>
+        <center> <P id="img-caption"> The greatest mamel on the planet!!</p></center>
    </div>
 <div id="tribute-info">
   <p>The Name Orangutan Means 'Forest Person'
